@@ -2,12 +2,9 @@ package com.rettichlp.unicacityaddon.events;
 
 import com.rettichlp.unicacityaddon.base.registry.annotation.UCEvent;
 import lombok.NoArgsConstructor;
-import net.labymod.api.client.entity.player.ClientPlayer;
 import net.labymod.api.client.world.item.ItemStack;
 import net.labymod.api.event.Subscribe;
 import net.labymod.api.event.client.chat.ChatReceiveEvent;
-import net.labymod.api.event.client.entity.player.ClientPlayerInteractEvent;
-import org.spongepowered.include.com.google.common.collect.ImmutableSet;
 
 import java.util.Set;
 
@@ -19,51 +16,59 @@ import java.util.Set;
 @NoArgsConstructor
 public class WeaponClickEventHandler {
 
-    private static final Set<String> WEAPONS = ImmutableSet.of("§8M4", "§8MP5", "§8Pistole", "§8Jagdflinte");
+    private static final Set<String> WEAPONS = Set.of("§8M4", "§8MP5", "§8Pistole", "§8Jagdflinte");
     public static boolean tazerLoaded = false;
     private long tazerLastWarningSend = 0;
 
-    @Subscribe
-    public void onPlayerInteract(ClientPlayerInteractEvent e) {
-        if (e.type().equals(ClientPlayerInteractEvent.InteractionType.ATTACK)) return;
+//    @Subscribe
+//    public void onPlayerInteract(PlayerInteractEvent e) {
+//        if (!(e instanceof PlayerInteractEvent.RightClickItem || e instanceof PlayerInteractEvent.RightClickBlock || e instanceof PlayerInteractEvent.EntityInteractSpecific))
+//            return;
+//
+//        ItemStack is = e.getItemStack();
+//        if (!isWeapon(is))
+//            return;
+//
+//        tazerLoaded = false;
+//        handleMunitionDisplay(is);
+//    }
 
-        ClientPlayer clientPlayer = e.clientPlayer();
-        ItemStack itemStack = clientPlayer.getMainHandItemStack();
-//        if (!isWeapon(itemStack)) return;
+    private static void handleMunitionDisplay(ItemStack is) {
+        String text = getText(is);
+        if (text == null)
+            return;
 
-        tazerLoaded = false;
-//        handleMunitionDisplay(itemStack);
+//        UnicacityAddon.MINECRAFT.ingameGUI.setOverlayMessage(text, true);
     }
 
-//    private static void handleMunitionDisplay(ItemStack is) {
-//        String text = getText(is);
-//        if (text == null) return;
-//
-//        UnicacityAddon.MINECRAFT.ingameGUI.setOverlayMessage(text, true);
-//    }
-//
-//    private static String getText(ItemStack itemStack) {
-//        NBTTagCompound nbt = itemStack.getTagCompound();
-//        if (nbt == null) return null;
+    private static String getText(ItemStack is) {
+//        NBTTagCompound nbt = is.getTagCompound();
+//        if (nbt == null)
+//            return null;
 //
 //        NBTTagCompound display = nbt.getCompoundTag("display");
 //
 //        String lore = display.getTagList("Lore", Constants.NBT.TAG_STRING).getStringTagAt(0);
 //        String[] splittedLore = lore.split("/");
-//        if (splittedLore.length != 2) return null;
+//        if (splittedLore.length != 2)
+//            return null;
 //
 //        String munitionString = splittedLore[0];
-//        if (munitionString.length() < 2) return null;
+//        if (munitionString.length() < 2)
+//            return null;
 //
 //        int munition = Integer.parseInt(munitionString.substring(2));
 //
 //        return (--munition < 1 ? ColorCode.RED.getCode() + "0" : ColorCode.GOLD.getCode() + munition) + ColorCode.GRAY.getCode() + "/" + ColorCode.GOLD.getCode() + splittedLore[1];
-//    }
+        return "";
+    }
 
-//    private boolean isWeapon(ItemStack itemStack) {
-//        if (itemStack == null) return false;
-//        return WEAPONS.contains(itemStack.getDisplayName());
-//    }
+    private boolean isWeapon(ItemStack is) {
+        if (is == null)
+            return false;
+
+        return WEAPONS.contains(is.getDisplayName());
+    }
 
     @Subscribe
     public void onChatReceive(ChatReceiveEvent e) {
@@ -75,13 +80,15 @@ public class WeaponClickEventHandler {
         }
     }
 
-//    @Subscribe
-//    public void onWeaponInteract(ClientPlayerInteractEvent e) {
-//        if (!tazerLoaded) return;
+//    @SubscribeEvent
+//    public void onWeaponInteract(PlayerInteractEvent e) {
+//        if (!tazerLoaded)
+//            return;
 //        if (!(e instanceof PlayerInteractEvent.LeftClickBlock || e instanceof PlayerInteractEvent.EntityInteractSpecific || e instanceof PlayerInteractEvent.LeftClickEmpty))
 //            return;
 //
-//        if (System.currentTimeMillis() - tazerLastWarningSend < TimeUnit.SECONDS.toMillis(5)) return;
+//        if (System.currentTimeMillis() - tazerLastWarningSend < TimeUnit.SECONDS.toMillis(5))
+//            return;
 //
 //        AbstractionLayer.getPlayer().sendInfoMessage("Achtung! Dein Tazer ist geladen!");
 //        tazerLastWarningSend = System.currentTimeMillis();
